--- a/extensions-jvm/milvus/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions-jvm/milvus/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -25,8 +25,9 @@ name: "Camel Milvus"
 description: "Perform operations on the Milvus Vector Database"
 metadata:
   icon-url: "https://raw.githubusercontent.com/apache/camel-website/main/antora-ui-camel/src/img/logo-d.svg"
+  unlisted: true
   guide: "https://camel.apache.org/camel-quarkus/latest/reference/extensions/milvus.html"
   categories:
   - "integration"
   status:
-  - "stable"
+  - "preview"
