--- a/extensions-jvm/pom.xml
+++ b/extensions-jvm/pom.xml
@@ -82,6 +82,7 @@
         <module>ldif</module>
         <module>lucene</module>
         <module>mail-microsoft-oauth</module>
+        <module>milvus</module>
         <module>mvel</module>
         <module>opensearch</module>
         <module>printer</module>
