--- a/pom.xml
+++ b/pom.xml
@@ -974,6 +974,7 @@
                                             </sourcePoms>
                                             <destinationPom>${basedir}/integration-tests/compression-grouped/pom.xml</destinationPom>
                                         </mergePom>
+                                        <!-- TODO: https://github.com/apache/camel-quarkus/issues/5995
                                         <mergePom>
                                             <sourcePoms>
                                                 <directory>${basedir}/integration-test-groups/foundation</directory>
@@ -983,6 +984,7 @@
                                             </sourcePoms>
                                             <destinationPom>${basedir}/integration-tests/foundation-grouped/pom.xml</destinationPom>
                                         </mergePom>
+                                        -->
                                         <mergePom>
                                             <sourcePoms>
                                                 <directory>${basedir}/integration-test-groups/mongodb</directory>
