--- a/integration-tests/splunk/pom.xml
+++ b/integration-tests/splunk/pom.xml
@@ -137,6 +137,103 @@
             </dependencies>
         </profile>
         <profile>
+            <id>full</id>
+            <activation>
+                <property>
+                    <name>!quickly</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>keytool-maven-plugin</artifactId>
+                        <configuration>
+                            <keypass>password</keypass>
+                            <validity>18250</validity>
+                            <keyalg>RSA</keyalg>
+                            <storepass>password</storepass>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>generate-splunkca-keypair</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>clean</goal>
+                                    <goal>generateKeyPair</goal>
+                                </goals>
+                                <configuration>
+                                    <alias>cxfca</alias>
+                                    <dname>CN=splunkca, OU=eng, O=apache.org</dname>
+                                    <exts>
+                                        <ext>bc:c=ca:true,pathlen:2147483647</ext>
+                                        <ext>IssuerAlternativeName=DNS:NOT-FOR-PRODUCTION-USE</ext>
+                                    </exts>
+                                    <keystore>${project.build.outputDirectory}/splunkca.jks</keystore>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>export-splunkca-certificate</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>exportCertificate</goal>
+                                </goals>
+                                <configuration>
+                                    <alias>cxfca</alias>
+                                    <keystore>${project.build.outputDirectory}/splunkca.jks</keystore>
+                                    <rfc>true</rfc>
+                                    <file>${project.build.outputDirectory}/splunkca.pem</file>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>generate-localhost-keypair</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>clean</goal>
+                                    <goal>generateKeyPair</goal>
+                                </goals>
+                                <configuration>
+                                    <alias>localhost</alias>
+                                    <dname>CN=localhost, OU=eng, O=apache.org</dname>
+                                    <exts>
+                                        <ext>IssuerAlternativeName=DNS:NOT-FOR-PRODUCTION-USE</ext>
+                                        <ext>SubjectAlternativeName=DNS:localhost,IP:127.0.0.1</ext>
+                                    </exts>
+                                    <keystore>${project.build.outputDirectory}/truststore-server.jks</keystore>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>generate-localhost-certificate-request</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>generateCertificateRequest</goal>
+                                </goals>
+                                <configuration>
+                                    <alias>localhost</alias>
+                                    <keystore>${project.build.outputDirectory}/truststore-server.jks</keystore>
+                                    <file>${project.build.outputDirectory}/localhost.csr</file>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>generate-localhost-certificate</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>generateCertificate</goal>
+                                </goals>
+                                <configuration>
+                                    <alias>cxfca</alias>
+                                    <keystore>${project.build.outputDirectory}/splunkca.jks</keystore>
+                                    <rfc>true</rfc>
+                                    <infile>${project.build.outputDirectory}/localhost.csr</infile>
+                                    <outfile>${project.build.outputDirectory}/localhost.pem</outfile>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>skip-testcontainers-tests</id>
             <activation>
                 <property>
