--- a/.github/workflows/label-issue.yaml
+++ b/.github/workflows/label-issue.yaml
@@ -134,10 +134,16 @@ jobs:
               }
             }
 
+            // Strip the / prefix as it seems to break GraphQL searches
+            const sanitizedLabels = Array.from(labels).map(label => {
+              const parts = label.split('/');
+              return parts.length > 1 ? parts[1] : parts[0];
+            });
+
             // Check to see if labels already exist, and if not, create them so we can set the color
             const labelQuery = `{
               repository(owner: "${context.repo.owner}", name: "${context.repo.repo}") {
-                labels(first: 50, query: "name: ${Array.from(labels).join(' || ')}") {
+                labels(first: 50, query: "name: ${sanitizedLabels.join(' || ')}") {
                   nodes {
                     name
                   }
